crates/alder-parse/src/snapshots/alder_parse__style__tests__style_rem_operator.snap
---
source: crates/alder-parse/src/style.rs
description: "style { width: 10 % 3 }"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 24,
        },
    },
    value: Style(
        Style {
            entries: [
                StyleEntry {
                    key: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 9,
                            },
                            end: Position {
                                line: 1,
                                column: 14,
                            },
                        },
                        value: Ident(
                            "width",
                        ),
                    },
                    value: Expr(
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 16,
                                },
                                end: Position {
                                    line: 1,
                                    column: 22,
                                },
                            },
                            value: BinOps {
                                operands: [
                                    BinOpOperand {
                                        expr: Located {
                                            region: Region {
                                                start: Position {
                                                    line: 1,
                                                    column: 16,
                                                },
                                                end: Position {
                                                    line: 1,
                                                    column: 18,
                                                },
                                            },
                                            value: Number(
                                                NumberLit {
                                                    value: 10.0,
                                                    text: "10",
                                                },
                                            ),
                                        },
                                        op: Located {
                                            region: Region {
                                                start: Position {
                                                    line: 1,
                                                    column: 19,
                                                },
                                                end: Position {
                                                    line: 1,
                                                    column: 20,
                                                },
                                            },
                                            value: Rem,
                                        },
                                    },
                                ],
                                last: Located {
                                    region: Region {
                                        start: Position {
                                            line: 1,
                                            column: 21,
                                        },
                                        end: Position {
                                            line: 1,
                                            column: 22,
                                        },
                                    },
                                    value: Number(
                                        NumberLit {
                                            value: 3.0,
                                            text: "3",
                                        },
                                    ),
                                },
                            },
                        },
                    ),
                },
            ],
        },
    ),
}
