crates/alder-parse/src/snapshots/alder_parse__style__tests__style_string_value.snap
---
source: crates/alder-parse/src/style.rs
description: "style { display: \"flex\" }"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 26,
        },
    },
    value: Style(
        Style {
            entries: [
                StyleEntry {
                    key: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 9,
                            },
                            end: Position {
                                line: 1,
                                column: 16,
                            },
                        },
                        value: Ident(
                            "display",
                        ),
                    },
                    value: Expr(
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 18,
                                },
                                end: Position {
                                    line: 1,
                                    column: 24,
                                },
                            },
                            value: Str(
                                "flex",
                            ),
                        },
                    ),
                },
            ],
        },
    ),
}
