crates/alder-parse/src/snapshots/alder_parse__style__tests__style_trailing_comma.snap
---
source: crates/alder-parse/src/style.rs
description: "style { padding: 16px, }"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 25,
        },
    },
    value: Style(
        Style {
            entries: [
                StyleEntry {
                    key: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 9,
                            },
                            end: Position {
                                line: 1,
                                column: 16,
                            },
                        },
                        value: Ident(
                            "padding",
                        ),
                    },
                    value: Dimension {
                        number: NumberLit {
                            value: 16.0,
                            text: "16",
                        },
                        unit: "px",
                    },
                },
            ],
        },
    ),
}
