crates/alder-parse/src/snapshots/alder_parse__style__tests__style_unitless_number.snap
---
source: crates/alder-parse/src/style.rs
description: "style { opacity: 1 }"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 21,
        },
    },
    value: Style(
        Style {
            entries: [
                StyleEntry {
                    key: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 9,
                            },
                            end: Position {
                                line: 1,
                                column: 16,
                            },
                        },
                        value: Ident(
                            "opacity",
                        ),
                    },
                    value: Expr(
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 18,
                                },
                                end: Position {
                                    line: 1,
                                    column: 19,
                                },
                            },
                            value: Number(
                                NumberLit {
                                    value: 1.0,
                                    text: "1",
                                },
                            ),
                        },
                    ),
                },
            ],
        },
    ),
}
