crates/alder-parse/src/snapshots/alder_parse__style__tests__style_with_comments.snap
---
source: crates/alder-parse/src/style.rs
description: "style {\n    // outer spacing\n    padding: 16px, // trailing\n    color: red,\n}\n"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 5,
            column: 2,
        },
    },
    value: Style(
        Style {
            entries: [
                StyleEntry {
                    key: Located {
                        region: Region {
                            start: Position {
                                line: 3,
                                column: 5,
                            },
                            end: Position {
                                line: 3,
                                column: 12,
                            },
                        },
                        value: Ident(
                            "padding",
                        ),
                    },
                    value: Dimension {
                        number: NumberLit {
                            value: 16.0,
                            text: "16",
                        },
                        unit: "px",
                    },
                },
                StyleEntry {
                    key: Located {
                        region: Region {
                            start: Position {
                                line: 4,
                                column: 5,
                            },
                            end: Position {
                                line: 4,
                                column: 10,
                            },
                        },
                        value: Ident(
                            "color",
                        ),
                    },
                    value: Expr(
                        Located {
                            region: Region {
                                start: Position {
                                    line: 4,
                                    column: 12,
                                },
                                end: Position {
                                    line: 4,
                                    column: 15,
                                },
                            },
                            value: Var(
                                "red",
                            ),
                        },
                    ),
                },
            ],
        },
    ),
}
